<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, RezzCommActivity!</string>
    <string name="app_name">RezzComm</string>
    <string name="search">Search</string>
    <string name="favourite">Favourite</string>
    <string name="appointments">My Appts</string>
    <string name="settings">Settings</string>
    <string name="specialty">Specialty</string>
    <string name="reasonforvisit">Reason for visit: </string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="professionalstatement">Professional Statement</string>
    <string name="specialtyandsubspecialty">Specialty and Sub-Specialty</string>
    <string name="educationandfellowship">Education</string>
    <string name="membership">Membership</string>
    <string name="booknow">Book Now</string>
    <string name="addfav">Add to Favourite List</string>
    <string name="sharethis">Share this</string>
    <string name="step1">1. Sign In</string>
    <string name="step2">2. Appt Details</string>
    <string name="step3">3. Verify</string>
    <string name="step4">4. Complete</string>
    <string name="signin">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register Now</string>
    <string name="notregister">Not a registered user?</string>
    <string name="pleaseenterfol">Please enter the following details</string>
    <string name="whoisthisapp">Who is this appointment for?</string>
    <string name="myself">&#160;&#160;Myself</string>
    <string name="someoneelse">&#160;&#160;Someone Else</string>
    <string name="patientname">Patient&quot;s Name</string>
    <string name="contactnumb">Contact Number</string>
    <string name="emailaddr">Email Address</string>
    <string name="firsttimevisit_lbl">First time visiting this doctor?</string>
    <string name="yes">&#160;&#160;Yes</string>
    <string name="no">&#160;&#160;No</string>
    <string name="next">Next</string>
    <string name="cancelpolicy">Cancellation Policy</string>
    <string name="iagreecancelpolicy">&#160;&#160;I agree to the doctor&quot;s cancellation policy</string>
    <string name="back">Back</string>
    <string name="confirm">Confirm</string>
    <string name="upcomingappts">Upcoming Appointments</string>
    <string name="pastappts">Past Appointments</string>
    <string name="addcalender">Add to My Calender</string>
    <string name="editappts">Edit Appointment</string>
    <string name="cancelappts">Cancel Appointment</string>
    <string name="bookingdetail">Booking Details</string>
    <string name="reasoncancel">Reason of cancellation</string>
    <string name="loginaccount">Login this account</string>
    <string name="accountinfo">Account Information</string>
    <string name="resscomminfo">Resscomm Info</string>
    <string name="version">Version</string>
    <string name="lastupdated">Last Updated</string>
    <string name="about">About</string>
    <string name="tou">Term of Use</string>
    <string name="filldetail">Fill out your detail</string>
    <string name="firstname">Firstname:</string>
    <string name="lastname">Lastname:</string>
    <string name="repassword">Re-enter password:</string>
    <string name="mobile">Mobile:</string>
    <string name="country">Country:</string>
    <string name="gender">Gender:</string>
    <string name="logout">Logout</string>
    <string name="noappts">- No Appointments -</string>
    <string name="languagespoken">Language Spoken</string>
    <string name="sendsms">We\'ll send a PIN to this number right away for verification</string>
</resources>