<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ececec"
    android:orientation="vertical" >

    <include layout="@layout/header_menu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/book_tab_bg"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/book_tab_bg_selected"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/step1"
            android:textColor="@android:color/white"
            android:textSize="@dimen/small_text" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/step2"
            android:textColor="@android:color/white"
            android:textSize="@dimen/small_text" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/step3"
            android:textColor="@android:color/white"
            android:textSize="@dimen/small_text" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/step4"
            android:textColor="@android:color/white"
            android:textSize="@dimen/small_text" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#a3a3a3" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#d8d8d8" />

    <TextView
        android:id="@+id/signin_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#bebebe"
        android:padding="12dp"
        android:text="@string/signin"
        android:textColor="@android:color/white"
        android:textSize="@dimen/medium_text" />

    <RelativeLayout
        android:id="@+id/email_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="12dp"
            android:text="@string/email"
            android:textColor="@android:color/black"
            android:textSize="@dimen/small_text" />

        <EditText
            android:id="@+id/email"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:inputType="textEmailAddress" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/password_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="12dp"
            android:text="@string/password"
            android:textColor="@android:color/black"
            android:textSize="@dimen/small_text" />

        <EditText
            android:id="@+id/password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:inputType="textPassword" />
    </RelativeLayout>

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/medium_text"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right|center_vertical" >

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btn_alt_red_bg"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/medium_text"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#a9a9a9" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f7f7f7" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/notregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="12dp"
            android:text="@string/notregister"
            android:textColor="@android:color/black"
            android:textSize="@dimen/small_text" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:background="@drawable/btn_alt_red_bg"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="@dimen/medium_text"
            android:textStyle="bold" />

        <Button
            android:id="@+id/logout_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:background="@drawable/btn_alt_red_bg"
            android:text="@string/logout"
            android:textColor="@android:color/white"
            android:textSize="@dimen/medium_text"
            android:textStyle="bold"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>