<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#456673"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/title_bar" />

    <ScrollView
        android:id="@+id/search_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/specialty"
                android:textColor="@android:color/white"
                android:textSize="@dimen/small_text"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/specialty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/reasonforvisit"
                android:textColor="@android:color/white"
                android:textSize="@dimen/small_text"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/reasonforvisit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="2dp"
                android:background="#3e5c6a" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="2dp"
                android:background="#4c6e7b" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/location"
                android:textColor="@android:color/white"
                android:textSize="@dimen/small_text"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="text"
                android:textSize="@dimen/medium_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/date"
                android:textColor="@android:color/white"
                android:textSize="@dimen/small_text"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/appointments_date"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="text"
                android:textSize="@dimen/medium_text" />

            <DatePicker
                android:id="@+id/datepicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/search_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/btn_bg"
        android:text="@string/search"
        android:textColor="@android:color/white"
        android:textSize="@dimen/big_text"
        android:textStyle="bold" />

</LinearLayout>