<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#9a6060" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_tab_bg"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/main_tab_bg_selector"
            android:drawableTop="@drawable/search"
            android:shadowColor="#AA000000"
            android:shadowDx="1.5"
            android:shadowDy="1.5"
            android:shadowRadius="1.5"
            android:text="@string/search"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/favourite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/main_tab_bg_selector"
            android:drawableTop="@drawable/favourite"
            android:shadowColor="#AA000000"
            android:shadowDx="1.5"
            android:shadowDy="1.5"
            android:shadowRadius="1.5"
            android:text="@string/favourite"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/appointments"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/main_tab_bg_selector"
            android:drawableTop="@drawable/appointments"
            android:shadowColor="#AA000000"
            android:shadowDx="1.5"
            android:shadowDy="1.5"
            android:shadowRadius="1.5"
            android:text="@string/appointments"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/main_tab_bg_selector"
            android:drawableTop="@drawable/settings"
            android:shadowColor="#AA000000"
            android:shadowDx="1.5"
            android:shadowDy="1.5"
            android:shadowRadius="1.5"
            android:text="@string/settings"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#580000" />

</LinearLayout>